--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### ExtJs template
 .architect
-bootstrap.css
-bootstrap.js
-bootstrap.json
-bootstrap.jsonp
-build/
-classic.json
-classic.jsonp
-ext/
-modern.json
-modern.jsonp
-resources/sass/.sass-cache/
+/public/bootstrap.css
+/public/bootstrap.js
+/public/bootstrap.json
+/public/bootstrap.jsonp
+/public/build/
+/public/classic.json
+/public/classic.jsonp
+/public/ext/
+/public/modern.json
+/public/modern.jsonp
+/public/resources/sass/.sass-cache/
 .idea/
 node_modules/
