--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.5.0",
     "bcrypt": "^1.0.3",
     "body-parser": "~1.17.1",
-    "connect-mongodb-session": "latest",
+    "connect-mongodb-session": "^1.4.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
