--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "~1.17.1",
     "connect-mongodb-session": "^1.4.0",
     "cookie-parser": "~1.4.3",
+    "csurf": "^1.9.0",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-request-id": "^1.4.0",
